Feature: Rotas referentes ao cadastro de endereço dos clientes
